--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,15 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^0.22.0
+  rflutter_alert: ^2.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  json_annotation: ^2.0.0
+  http: any
+json_table: ^1.4.0
 
 dev_dependencies:
   flutter_test:
