--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   json_annotation: ^2.0.0
   http: any
+  scoped_model: ^2.0.0
 json_table: ^1.4.0
 
 dev_dependencies:
